tests/__snapshots__/api-toBeUnknown-stderr.snap.txt
Error: The source type is 'string'.

   7 |   expect(returnsUnknown()).type.toBeUnknown();
   8 | 
>  9 |   expect(returnsString()).type.toBeUnknown();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT unknown?", () => {

       at ./__typetests__/toBeUnknown.tst.ts:9:32 ❭ is unknown?

Error: The source type is 'unknown'.

  13 |   expect(returnsString()).type.not.toBeUnknown();
  14 | 
> 15 |   expect(returnsUnknown()).type.not.toBeUnknown();
     |                                     ^
  16 | });
  17 | 

       at ./__typetests__/toBeUnknown.tst.ts:15:37 ❭ is NOT unknown?

